# serializer version: 1
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 1 Kühlanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 2 Kühlanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 1 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Pufferspeicher 2 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 1 PV-Überschuss',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 2 PV-Überschuss',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 1 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Externe Wärmequelle 2 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_circuit_pump_state_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Heizkreis 1 Pumpe Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_circuit_pump_state_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_consuming_excess_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wärmepumpe PV-Überschuss',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_consuming_excess_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_compressor_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Kompressor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_compressor_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_actuator_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Quellenaktor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_actuator_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Quelle',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_pressure_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Quellendruck',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_pressure_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_three_phase_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Drehstrom',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_three_phase_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_has_vfd_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Wärmepumpe Frequenzumrichter',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_vfd_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_heat_pump_heat_request]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Wärmepumpe Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_heat_request',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Warmwasserspeicher 1 Zirkulationspumpe Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Warmwasserspeicher 2 Zirkulationspumpe Status',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Warmwasserspeicher 1 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Warmwasserspeicher 2 Heizanforderung',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_hot_water_tank_hot_water_flow_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Warmwasserspeicher 1 Warmwasser läuft',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_hot_water_flow_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_photovoltaics_excess_energy_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaik PV-Überschuss',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_photovoltaics_excess_energy_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 1 Heizanforderung 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 2 Heizanforderung 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 1 Heizanforderung 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[de-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solarkreis 2 Heizanforderung 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 1 Cool request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 2 Cool request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_cool_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 1 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Buffer tank 2 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_buffer_tank_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 1 PV surplus',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 2 PV surplus',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_consuming_excess_energy_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 1 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'External heat source 2 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_external_heat_source_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_circuit_pump_state_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Heating circuit 1 Pump state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_circuit_pump_state_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_consuming_excess_energy]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heat pump PV surplus',
      'icon': 'mdi:solar-power',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_consuming_excess_energy',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_compressor_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Compressor',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_compressor_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_actuator_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Source actuator',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_actuator_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Source',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_source_pressure_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Source pressure',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_source_pressure_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_three_phase_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Three-phase',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_three_phase_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_has_vfd_failure]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'problem',
      'friendly_name': 'Heat pump Frequency inverter',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_has_vfd_failure',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_heat_pump_heat_request]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Heat pump Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_heat_pump_heat_request',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Hot water tank 1 Circulation pump state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'running',
      'friendly_name': 'Hot water tank 2 Circulation pump state',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_circulation_pump_state_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hot water tank 1 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hot water tank 2 Heat request',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_heat_request_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_hot_water_tank_hot_water_flow_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Hot water tank 1 Hot water flow',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_hot_water_tank_hot_water_flow_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_photovoltaics_excess_energy_active]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Photovoltaics PV surplus',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_photovoltaics_excess_energy_active',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 1 Heat request 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 2 Heat request 1',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 1 Heat request 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_binary_sensors[en-binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'friendly_name': 'Solar circuit 2 Heat request 2',
    }),
    'context': <ANY>,
    'entity_id': 'binary_sensor.keba_keenergy_12345678_solar_circuit_heat_request_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
